examples/test/testpolicy13289.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13289
  namespace: namespace410
spec:
  podSelector:
    matchLabels:
      key47: value29
      key17: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value12
          key32: value38
      podSelector:
        matchLabels:
          key8: value9
          key4: value16
